--- a/script/welcome_script.Rmd
+++ b/script/welcome_script.Rmd
@@ -1,7 +1,5 @@
 ---
 title: "Welcome"
-author: "[Andrew Stewart](https://ajstewartlang.netlify.app/)"
-date: "8th and 9th July 2021"
 output: 
   html_document:
     theme: flatly
@@ -10,15 +8,34 @@ output:
 ---
 # Welcome
 
-Welcome everyone to my R Course for the Open University. There is a little bit of preparation work I'd like you to do in advance. Before the course itself I'd like you to watch the videos below and install R and RStudio Desktop. R is the programming language, and RStudio Desktop is the interface we use to interact with the language. It's important that you have working installations of R and RStudio Desktop on your computers before the course starts, so if you have any trouble getting those two things up and running please let me know in advance. You can contact me via [email](mailto:drandrewjstewart@gmail.com) or direct message on [Twitter](https://twitter.com/ajstewart_lang).
+Welcome everyone to this R Course for the Department of Linguistics at the University of Manchester. There is a little bit of preparation work I'd like you to do in advance. Before the course itself I'd like you to watch the videos below and install R and RStudio Desktop. R is the programming language, and RStudio Desktop is the interface we use to interact with the language. It's important that you have working installations of R and RStudio Desktop on your computers before the course starts, so if you have any trouble getting those two things up and running please let me know in advance. You can contact me via [email](mailto:paul.stott-2@postgrad.manchester.ac.uk).
 
-First off, have a look at this video about the course.
+First off, have a look at these videos about the importance of Open Research with respect to research reptoducibility and transparency.
+
+## Open Research (A Brief History)
+
+First I'd like you to watch the following video where I describe the history of the replication crisis and the issues which have motivated a move towards the adoption of open and reproducible research practices. I cover the so-called replication crisis in the biomedical sciences, issues around open research, and summarise some of the initiatives (including the [UK Reproducibility Network](https://www.bristol.ac.uk/psychology/research/ukrn/)) that have been established to address the fundamental problems around open research, transparency, and reproducibility in science.
+
 
 &nbsp;&nbsp;
 
 <center>
 
-<iframe width="560" height="315" src="https://youtube.com/embed/nN-9qf8UI8I" frameborder="0" data-external="1" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://youtube.com/embed/wJlonh-XALE" frameborder="0" data-external="1" allowfullscreen></iframe>
+
+</center>
+
+&nbsp;&nbsp;
+
+## How to do Reproducible Research
+
+One of the biggest challenges facing researchers who are used to the **old** way of conducting research is that they feel that they don't have the knowledge or technical skills to adopt open and reproducible research practices.  But it's not that hard!  Before you run your experiment, you can pre-register your hypotheses so that when you come to analyse and write-up your results, you can demonstrate that your predictions really were made in advance of data collection. You can also make your research data open (and FAIR) alongside your code so that others can recreate your analyses. And by posting your research article on a pre-print server (such as [PsyArXiv](https://psyarxiv.com) or [bioRxiv](https://www.biorxiv.org)) before submission to a journal, you make your research findings available to all. The adoption of open source software such as R, also means that any research findings you produce can be *re*-produced by others who can access your data and code. This principle of using open tools to allow us to produce open (and reusable) data and code is the fundamental philosophy behind all of the workshops in this unit. Have a look at the video below where I talk about how we can adopt open and reproducible research practices.
+
+&nbsp;&nbsp;
+
+<center>
+
+<iframe width="560" height="315" src="https://youtube.com/embed/BscWSJFmsHE" frameborder="0" data-external="1" allowfullscreen></iframe>
 
 </center>
 
@@ -61,8 +78,6 @@ If you are using a Chromebook, or have a tablet, or are having difficulties inst
 </center>
 
 &nbsp;&nbsp;
-
-You can view the slides [here](https://docs.google.com/presentation/d/19Y70sxKZH0Wp1Lm-0FMktiHjfAHBvHJHSfdxpPQuIgA/edit?usp=sharing).
 
 ## Customising RStudio Desktop
  
@@ -108,9 +123,6 @@ Both days will be run via Zoom. Make sure you install the [Zoom client](https://
 
 I'll circulate the Zoom details beforehand.
 
-## Technical Details
-All of the material in this workshop was created using open source where possible. I used a [Lenovo ThinkPad X13](https://www.lenovo.com/gb/en/laptops/thinkpad/x-series/ThinkPad-X13-Intel-/p/22TPX13X3N1) running [GNU/Linux distro Ubuntu 20.04 LTS (Focal Fossa)](https://releases.ubuntu.com/20.04/). The audio was captured with a [Fifine USB Podcasting microphone](https://www.amazon.co.uk/Condenser-Microphone-Recording-Interface-Power-K669/dp/B01N034RTC/ref=sr_1_1_sspa?crid=141Z8ED4VGCVD&dchild=1&keywords=fifine+usb+podcast+condenser+microphone&qid=1594989611&sprefix=fifne+usb%2Caps%2C162&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFFMzAxOE5DUDJIREwmZW5jcnlwdGVkSWQ9QTA4MzA2NjIxVU40MlhNMFNCTDhWJmVuY3J5cHRlZEFkSWQ9QTA5NDI2OTQxOFY0R002UVJBS1AzJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==) and the video with a [Razer Kiyo webcam](https://www.amazon.co.uk/Razer-Streaming-Adjustable-Brightness-Microphone/dp/B076QK6489/ref=sr_1_3?dchild=1&keywords=razer+kiyo&qid=1594989677&sr=8-3). The audio and video were recorded using [Open Broadcaster Software](https://obsproject.com/) and edited using [Shotcut](https://shotcut.org/). The R code was written using [R 4.0.5](https://www.r-project.org/), and run in [RStudio Desktop IDE](https://rstudio.com/products/rstudio/download/) version 1.4.1106.
-
-The structure for this course was very much inspired by the [Sharing At Short Notice](https://rstudio.com/resources/webinars/sharing-on-short-notice-how-to-get-your-materials-online-with-r-markdown/) webinar by Alison Hill and Desirée De Leon.
+## License
 
 The source code for each of the lessons in this course is licensed under the [MIT license](https://opensource.org/licenses/MIT).
